# dphe-db-pipeline

./: .env.example.importer  .gitignore  LICENSE  NOTICE  QUICKSTART.md  README.md  TODO.md  check_encodings.py  explore_database.py  extract_cancers_data.py  extract_concepts.py  import_parsed_data.py  move_scripts.py  parse_all_by_group.py  parse_attributes_by_group.py  parse_cancers_by_group.py  parse_concepts_by_group.py  parse_tumors_by_group.py  pipeline.py  pyproject.toml  query_tumors.py  query_tumors_adenocarcinoma_breastlump.py  split_csv_files.py  test_parse_concepts.py
.github/workflows/: build-binaries.yml  tests.yml
deepphe/: deepphe  deepphe_sqlite_compressed-shm
docs/: distribution.md
docs/importer/: architecture.md  config-reference.md  runbook.md  source-modes.md  table-catalog.md  troubleshooting.md
docs/importer/adrs/: 0001-sqlite-is-the-only-destination.md  0002-mysql-is-a-read-only-source.md  0003-json-mode-writes-directly-to-calculated-tables.md
docs/loader/: API_REFERENCE.md  EXTRACT_100_PATIENTS.md  README.md
packaging/: dphe-pipeline.spec  smoke_test.py
src/: README.md
src/analysis/: README.md  __init__.py  top_25_by_patients.py
src/dphe_db_pipeline/: cli.py  paths.py  pipeline.py
src/dphe_db_pipeline/analysis/: README.md  __init__.py  top_25_by_patients.py
src/dphe_db_pipeline/analysis/tools/: __init__.py  top_25_by_patients.py
src/dphe_db_pipeline/extractor/: create_concepts_table.py  extract_calculated_dx_data.py  extract_calculated_patient_data.py  generate_patient_summaries.py  import_parsed_data.py  import_patient_summaries.py  parse_all_by_group.py  regenerate_data_pipeline.py  stored_content.py
src/dphe_db_pipeline/extractor/extractors/: extract_cancers.py  extract_cancers_data.py  extract_concepts.py
src/dphe_db_pipeline/extractor/parsers/: parse_attributes_by_group.py  parse_cancers_by_group.py  parse_concepts_by_group.py  parse_tumors_by_group.py
src/dphe_db_pipeline/extractor/patient_summaries/: bitmap_index.py  demographics.py  humanize.py  models.py  (+1 more)
src/dphe_db_pipeline/loader/: check_encodings.py  check_patient_count.py  compression.py  explore_database.py  extract_100_patients.py  investigate_structure.py  load_to_sqlite.py  query_sqlite.py
src/dphe_db_pipeline/omop_importer/: export_tables.py  load_tables.py  omop-config.js  run.py
src/dphe_db_pipeline/utils/: __init__.py  split_csv_files.py
src/extractor/: create_concepts_table.py  extract_calculated_dx_data.py  extract_calculated_patient_data.py  import_parsed_data.py  import_patient_summaries.py  regenerate_data_pipeline.py
src/extractor/extractors/: extract_cancers_data.py
src/extractor/parsers/: parse_tumors_by_group.py
src/extractor/patient_summaries/: config.py
src/extractor/queries/: query_tumors.py
src/importer/: config.json  export_tables.py  load_tables.py  run.py
src/importer/db/: cancer.sql  date_of_first_dx.sql  get_dx_count.sql  get_dx_count_demo.sql  purge_logs.sql  race.sql
src/importer/reports/: age_cancer.py
src/importer/schemas/: patient_demographics.schema.json
src/importer/source/: config_processor.py  json_demographics_processor.py
src/loader/: check_patient_count.py  compact_sqlite.py  debug_filenames.py  extract_100_patients.py  investigate_structure.py  load_to_sqlite.py  query_sqlite.py
src/omop_importer/db/: before_dx.sql  male_with_ovarian.sql  validate_earliest_cancer.sql
src/scripts/: README.md  __init__.py  extract_calculated_patient_data.py  generate_patient_summaries.py  import_parsed_data.py  parse_all_by_group.py  regenerate_data_pipeline.py
src/scripts/extractors/: extract_cancers.py  extract_cancers_data.py
src/scripts/parsers/: parse_attributes_by_group.py  parse_cancers_by_group.py  parse_concepts_by_group.py  parse_tumors_by_group.py
src/scripts/patient_summaries/: bitmap_index.py  demographics.py  humanize.py  models.py  postprocess.py
src/scripts/queries/: query_tumors_adenocarcinoma_breastlump.py
src/utils/: __init__.py  check_encodings.py  explore_database.py  split_csv_files.py
tests/: README.md  __init__.py  test_attributes_value_ignored.py  test_extractor_failure_modes.py  test_loader_inputs.py  test_parse_concepts.py  test_pipeline_e2e.py  test_storage_helpers.py
tests/importer/: test_json_demographics_processor.py  test_run_config.py
tests/omop_importer/: test_csv_ingestion.py  test_icd_lookup.py  test_json_demographics_processor.py  test_run_config.py
(+217 files in other folders)
