[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deepphe-concept-extractor"
version = "0.1.0"
description = "Medical concept extraction from DeepPhe database"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "John Levander" },
]
dependencies = [
    "zstandard>=0.22.0",
    "pyroaring>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
]

[project.scripts]
extract-cancers = "deepphe_concept_extractor.cli:extract_cancers_cli"
extract-concepts = "deepphe_concept_extractor.cli:extract_concepts_cli"
explore-db = "deepphe_concept_extractor.cli:explore_db_cli"
create-concepts-table = "deepphe_concept_extractor.cli:create_concepts_table_cli"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
