[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dphe-db-pipeline"
version = "0.1.0"
description = "Full DeepPhe pipeline: NLP output → OMOP database → extracted concepts"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "John Levander" },
]
dependencies = [
    "zstandard>=0.22.0",
    "pyroaring>=0.4.0",
    "python-dotenv>=1.0.1",
    "pandas>=2.2.3",
    "numpy>=2.1.3",
    "matplotlib>=3.9.2",
    "seaborn>=0.13.2",
    "icd10-cm>=0.0.5",
    "icd9cms>=0.1.0",
]

[project.optional-dependencies]
mysql = [
    "mysql-connector-python>=9.0.0",
]
dev = [
    "pytest>=8.0.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
]

[project.scripts]
dphe-pipeline = "dphe_db_pipeline.pipeline:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/dphe_db_pipeline"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
    "icd10",
    "icd9cms",
    "lz4.*",
    "mysql.*",
    "pandas.*",
    "seaborn.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "dphe_db_pipeline.analysis.*",
    "dphe_db_pipeline.extractor.tools.extract_calculated_dx_data",
    "dphe_db_pipeline.extractor.tools.extract_calculated_patient_data",
    "dphe_db_pipeline.extractor.extractors.*",
    "dphe_db_pipeline.extractor.import_parsed_data",
    "dphe_db_pipeline.extractor.parsers.*",
    "dphe_db_pipeline.extractor.tools.*",
    "dphe_db_pipeline.loader.*",
    "dphe_db_pipeline.omop_importer.db.*",
    "dphe_db_pipeline.omop_importer.tools.export_tables",
    "dphe_db_pipeline.omop_importer.tools.load_tables",
    "dphe_db_pipeline.omop_importer.omop_mappers.*",
    "dphe_db_pipeline.omop_importer.tools.age_cancer",
    "dphe_db_pipeline.omop_importer.run",
    "dphe_db_pipeline.omop_importer.source.config_processor",
]
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
